[gd_scene load_steps=5 format=3 uid="uid://db6vhnajpexm5"]

[ext_resource type="Script" path="res://Assets/Scripts/TitleScreen.gd" id="1_7765a"]
[ext_resource type="PackedScene" uid="uid://c56nip0c3imtv" path="res://Assets/Scenes/Menus/MainMenu/MainMenu.tscn" id="1_nlldt"]
[ext_resource type="Script" path="res://Assets/Scripts/Menus/MainMenu.gd" id="2_4x8au"]
[ext_resource type="PackedScene" uid="uid://cu1u47how3mx0" path="res://Assets/Scenes/Menus/SettingsMenu.tscn" id="2_kpp6g"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7765a")
first_level_scene_path = "res://Assets/Scenes/Level1.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.176471, 0.407843, 0.509804, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="MainMenu" parent="MarginContainer" instance=ExtResource("1_nlldt")]
layout_mode = 2
script = ExtResource("2_4x8au")

[node name="SettingsMenu" parent="MarginContainer" instance=ExtResource("2_kpp6g")]
visible = false
layout_mode = 2
